@@ -1,3 +1,26 @@
 # JavaFX-Login-With-JDBC
 
-![Sample Screenshots] ()
+
+## Login sample Taken screenshot 
+![Sample Screenshots] (https://github.com/Abel5173/JavaFX-Login-With-JDBC/blob/main/Screenshots/login.png)
+---
+
+## Login sample Taken screenshot 
+![Sample Screenshots] (https://github.com/Abel5173/JavaFX-Login-With-JDBC/blob/main/Screenshots/signUp.png)
+---
+
+## Welcome sample Taken screenshot 
+![Sample Screenshots] (https://github.com/Abel5173/JavaFX-Login-With-JDBC/blob/main/Screenshots/welcomePage.png)
+---
+
+## 👉Requirments👈
+  JDK - 17.0.2
+  JavaFX SDK - 17.0.2
+  JFoenix - 9.0.10
+  ---
+## vmArgs SetUp
+
+```vmArgs
+--module-path /pathHere/javafx-sdk-18.0.1/lib --add-modules javafx.controls,javafx.fxml
+```
+
